# arrival_testtask

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: srv.cpp
dashboard/: CMakeLists.txt  dashboard.pro  dashboard.qrc  main.cpp  thread.cpp  thread.h
dashboard/qml/: ValueSource.qml  dashboard.qml
libmyaio/: CMakeLists.txt
libmyaio/inc/: lib.h  utils.h
libmyaio/src/: lib.c  utils.c
